Detalle en imagenes

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <nav class="navbar navbar-expand-lg">
       <div class="container-fluid">
         <a href="/index" class="navbar-brand">
-          <img src="assets/img/logo.png" class="img-fluid" alt="" />
+          <img src="assets/img/logo.png" class="img-fluid" alt="logo de la barra de navegacion" />
         </a>
         <button
           class="navbar-toggler"
@@ -59,7 +59,7 @@
     >
       <div class="row">
         <div class="col-md-12 d-flex justify-content-center">
-          <img src="assets/img/logoo.png" class="img-fluid" alt="" />
+          <img src="assets/img/logoo.png" class="img-fluid" alt="Logo del comercio en grande" />
         </div>
         <div class="col-md-12 text-center text-white">
           <h4>Comercialización de productos y servicios para el automotor</h4>
@@ -159,7 +159,7 @@
         </div>
         <div class="row text-center">
           <div class="col">
-            <img src="assets/img/camaraderia (2) 1.png" alt="" />
+            <img src="assets/img/camaraderia (2) 1.png" alt="img decorativa" />
             <h4 class="color-texto">Ventas</h4>
             <p class="color-texto">
               Nuestra Misión es otorgar seguridad y confort en el andar de
@@ -169,7 +169,7 @@
             </p>
           </div>
           <div class="col">
-            <img src="assets/img/crecer 1.png" alt="" />
+            <img src="assets/img/crecer 1.png" alt="img decorativa" />
             <h4 class="color-texto">Misíon</h4>
             <p class="color-texto">
               Para ello contamos con una estructura comercial donde se
@@ -181,7 +181,7 @@
             </p>
           </div>
           <div class="col">
-            <img src="assets/img/llave-inglesa 1.png" alt="" />
+            <img src="assets/img/llave-inglesa 1.png" alt="img decorativa" />
             <h4 class="color-texto">Servicios</h4>
             <p class="color-texto">
               En nuestros talleres operamos con personal capacitado y maquinaria
@@ -195,13 +195,13 @@
     <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="assets/img/auto-control-mecanico.jpg" class="d-block w-100" alt="...">
+          <img src="assets/img/auto-control-mecanico.jpg" class="d-block w-100" alt="Mecanico controlando neumaticos">
         </div>
         <div class="carousel-item">
-          <img src="assets/img/mecanico.jpg" class="d-block w-100" alt="...">
+          <img src="assets/img/mecanico.jpg" class="d-block w-100" alt="Mecanico trabajando">
         </div>
         <div class="carousel-item">
-          <img src="assets/img/neumaticos-nuevos-almacen.jpg" class="d-block w-100" alt="...">
+          <img src="assets/img/neumaticos-nuevos-almacen.jpg" class="d-block w-100" alt="Almacen de neumaticos">
         </div>
       </div>
       <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
@@ -261,21 +261,21 @@
               <img
                 class="img-fluid"
                 src="assets/img/instagram (1) 3.png"
-                alt=""
+                alt="Instagram"
               />
             </div>
             <div class="mb-2">
               <img
                 class="img-fluid"
                 src="assets/img/facebook (1) 3.png"
-                alt=""
+                alt="Facebook"
               />
             </div>
             <div class="mb-2">
               <img
                 class="img-fluid"
                 src="assets/img/whatsapp (1) 3.png"
-                alt=""
+                alt="Whatsapp"
               />
             </div>
           </div>
